--- a/loops.html
+++ b/loops.html
@@ -51,7 +51,7 @@ There are also <b>Range function</b> and <b>Break Statement</b> that comes into 
 Let's get started.
 </div>
 <div id="code">
-	>> <span class="one">for </span> x in <span class="one">range</span>(0,10):<Br>
+	>> <span class="keyword">for </span> x <span class='keyword'>in</span> <span class="function">range</span>(<span class='number'>0</span><span class='operator'>,</span><span class='number'>10</span>):<Br>
 	 &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <span class="print">print</span> x
 </div>
 <div id="card">
@@ -80,8 +80,8 @@ And hence the print will be something like this : <Br>
 	<br>
 </div>
 <div id="code">
->> <span class="one">while </span> (1 < 2):<BR>
- &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <span class="print">print</span> "This will never stop! This is an infinite loop as 1 < 2 is always true!"
+>> <span class="keyword">while </span> (<span class='number'>1</span> <span class='operator'><</span> <span class='number'>2</span>):<BR>
+ &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <span class="print">print</span> <span class='quotes'>"</span><span class='string'>This will never stop! This is an infinite loop as 1 < 2 is always true!</span><span class='quotes'>"</span>
 </div>
 <div id="card">
 In this example, the condition 1 < 2 is always true hence the loop will go on forever.
@@ -90,7 +90,7 @@ In this example, the condition 1 < 2 is always true hence the loop will go on fo
 The range function can do more things. Here take a snippet.<br>
 </div>
 <div id="code">
-	>> <span class="one">for </span> x in <span class="one">range</span>(0,10,2):<Br>
+	>> <span class="keyword">for </span> x <span class='keyword'>in</span> <span class="one"><span class='function'>range</span></span>(<span class='number'>0</span><span class='operator'>,</span><span class='number'>10</span><span class='operator'>,</span><span class='number'>2</span>):<Br>
 	 &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <span class="print">print</span> x<Br><Br>
 0<br>
 2<br>
