Completed README and some more changes.

--- a/op.html
+++ b/op.html
@@ -35,7 +35,7 @@
 		For Ex :<br/>
 		</div>
 		<div id="code">
-			>> <span class="one">z</span> <span class='equals'>=</span> <span class="one">x</span> <span class='operator'>+</span> <span class="one">y</span> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<span style="color: #15aabf;">#The equals sign is an operator that is working on three vars.</span> 
+			>> <span class="one">z</span> <span class='equals'>=</span> <span class="one">x</span> <span class='operator'>+</span> <span class="one">y</span> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<span class="comment"># The equals sign is an operator that is working on three vars.</span> 
 		</div>
 		<div id="card">
 		Here, <b>z</b> has a value that is equal to the sum of x and y. The + is an operator, similarly the = is also an operator.
